@@ -1,5 +1,5 @@
 plugins {
-    id "org.jetbrains.kotlin.jvm" version "1.7.10"
+    id "org.jetbrains.kotlin.jvm" version "1.7.22"
     id 'me.champeau.mrjar' version "0.1.1"
 }
 
@@ -92,10 +92,10 @@ dependencies {
     optionalApi 'org.hibernate:hibernate-entitymanager'
 
     // server runtime monitoring
-    optionalApi 'org.eclipse.jetty:jetty-server'
+    optionalApi libs.jetty9Server
     // jakarta servlet
-    optionalApi 'jakarta.servlet:jakarta.servlet-api:5.+'
-    optionalApi 'org.eclipse.jetty:jetty-client'
+    optionalApi 'jakarta.servlet:jakarta.servlet-api'
+    optionalApi libs.jetty9Client
     optionalApi 'org.apache.tomcat.embed:tomcat-embed-core'
     optionalApi 'org.glassfish.jersey.core:jersey-server'
     optionalApi 'io.grpc:grpc-api'
@@ -147,7 +147,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter'
     testImplementation 'com.tngtech.archunit:archunit-junit5'
 
-    testImplementation 'org.mockito:mockito-inline'
+    testImplementation 'org.mockito:mockito-core'
 
     testImplementation 'org.hsqldb:hsqldb'
     testImplementation 'com.h2database:h2'
@@ -160,7 +160,7 @@ dependencies {
 
     testImplementation 'org.apache.kafka:kafka-clients'
 
-    testImplementation 'org.apache.commons:commons-pool2:2.+'
+    testImplementation libs.commonsPool2
 
     testImplementation 'org.glassfish.jersey.test-framework.providers:jersey-test-framework-provider-inmemory'
     testRuntimeOnly 'org.glassfish.jersey.inject:jersey-hk2'
@@ -170,7 +170,7 @@ dependencies {
     java11TestImplementation 'com.github.tomakehurst:wiremock-jre8-standalone'
 
     // Log4j2 Async dependency
-    testImplementation 'com.lmax:disruptor:3.4.+'
+    testImplementation libs.lmaxDisruptor
 
     // Kafka binder IT dependencies
     testImplementation 'org.testcontainers:testcontainers'
@@ -186,17 +186,18 @@ dependencies {
     // Dependencies for @ClassPathExclusions
     testImplementation("org.junit.platform:junit-platform-engine")
     testImplementation("org.junit.platform:junit-platform-launcher")
-    testImplementation("org.apache.maven.resolver:maven-resolver-connector-basic:latest.release")
-    testImplementation("org.apache.maven:maven-resolver-provider:3.+") {
+    testImplementation(libs.mavenResolverConnectorBasic)
+    testImplementation(libs.mavenResolverProvider) {
         exclude(group: "javax.inject", module: "javax.inject")
     }
-    testImplementation("org.apache.maven.resolver:maven-resolver-transport-http:latest.release") {
+    testImplementation(libs.mavenResolverTransportHttp) {
         exclude group: "org.slf4j", module: "jcl-over-slf4j"
     }
-    testImplementation("org.apache.maven.resolver:maven-resolver-connector-basic:latest.release")
     // gRPC
-    testImplementation("io.grpc:grpc-core")
-    testImplementation("io.grpc:grpc-testing-proto")
+    testImplementation 'io.grpc:grpc-core'
+    testImplementation 'io.grpc:grpc-inprocess'
+    testImplementation 'io.grpc:grpc-testing-proto'
+    testImplementation 'com.squareup.retrofit2:retrofit'
 }
 
 task shenandoahTest(type: Test) {
@@ -219,6 +220,17 @@ task zgcTest(type: Test) {
     }
 
     jvmArgs '-XX:+UseZGC'
+}
+
+task zgcGenerationalTest(type: Test) {
+    // set heap size for the test JVM(s)
+    maxHeapSize = "1500m"
+
+    useJUnitPlatform {
+        includeTags 'gc'
+    }
+
+    jvmArgs '-XX:+UseZGC', '-XX:+ZGenerational'
 }
 
 task openj9BalancedTest(type: Test) {
